<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:icon="@drawable/search"/>

    <item
        android:id="@+id/action_news"
        android:orderInCategory="50"
        android:title="@string/action_news"
        app:showAsAction="always"
        android:icon="@drawable/messages"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="300"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
